--- a/public/chat.ejs
+++ b/public/chat.ejs
@@ -128,6 +128,16 @@
         <div class="lightbox__image"></div>
       </div>
 
+      <div class="click-option" style="display: none;">
+        <ul>
+          <li class="reply-action">Reply <i class="fa-solid fa-reply"></i></li>
+          <li class="view-action" style="display: none;">View <i class="fa-regular fa-eye"></i></li>
+          <li class="store-action" style="display: none;">Save <i class="fa-solid fa-download"></i></li>
+          <li class="copy-action" style="display: none;">Copy <i class="fa-regular fa-clone"></i></li>
+          <li class="close-action"> Close <i class="fa-solid fa-xmark"></i></li>
+        </ul>
+      </div>
+
       <div class="about" style="display: none;">
         <p style="font-size: 1.2rem;">Poketab Messanger</p>
         <p>Developed by <a href="http://itsfuad.netlify.app">Fuad Hasan</a> 🐸</p>
