--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -24,6 +24,7 @@
   --primary: #111d2a;
   --foreground: #ffffff;
   --focus: #ffffff17;
+  --option-color: #253c52;
   --topbarsize: 50px;
   --app-height: 100vh;
   --pattern-image: url("./../images/avatars/ball\(custom\).png");
@@ -50,6 +51,18 @@ body {
       -ms-user-select: none;
           user-select: none;
   overscroll-behavior-y: contain;
+}
+
+.copy-action {
+  color: lime;
+}
+
+.close-action {
+  color: orangered;
+}
+
+.reply-action, .store-action, .view-action {
+  color: var(--secondary);
 }
 
 .intro {
@@ -105,7 +118,7 @@ h3 {
 button,
 button:hover {
   border: none;
-  color: white;
+  color: var(--foreground);
   font-size: 0.8rem;
 }
 
@@ -220,13 +233,13 @@ button:disabled {
 
 .chat__sidebar li {
   padding: 7px 0 5px 0;
-  color: white;
+  color: var(--foreground);
   font-size: 0.7rem;
   margin: 5px;
 }
 
 .chat__sidebar h3 {
-  color: white;
+  color: var(--foreground);
   margin: 10px 20px;
   text-align: left;
   color: var(--secondary);
@@ -265,7 +278,7 @@ input[type=file] {
   left: 0;
   width: 100%;
   height: 40%;
-  background: #192431;
+  background: var(--option-color);
   z-index: 100;
 }
 
@@ -566,7 +579,7 @@ input[type=file] {
   position: fixed;
   top: 0;
   left: -100%;
-  background: rgba(29, 47, 66, 0.7);
+  background: var(--option-color);
   -webkit-backdrop-filter: blur(10px);
           backdrop-filter: blur(10px);
   width: 60%;
@@ -905,7 +918,7 @@ input[type=file] {
   position: absolute;
   bottom: 100px;
   left: 50%;
-  background: #00000072;
+  background: var(--option-color);
   padding: 10px;
   border-radius: 15px;
   -webkit-backdrop-filter: blur(2px);
@@ -931,9 +944,9 @@ input[type=file] {
       -ms-flex-pack: center;
           justify-content: center;
   position: absolute;
-  bottom: 100px;
+  bottom: 80px;
   left: 50%;
-  background: #00000072;
+  background: var(--option-color);
   padding: 10px;
   border-radius: 25px;
   -webkit-backdrop-filter: blur(2px);
@@ -942,6 +955,10 @@ input[type=file] {
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
   z-index: 100;
+  gap: 10px;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
 }
 
 .newmessagepopup img {
@@ -1005,7 +1022,7 @@ input[type=file] {
   margin: 10px;
   -webkit-transition: 200ms;
   transition: 200ms;
-  color: white;
+  color: var(--foreground);
   width: 100%;
   -webkit-backdrop-filter: blur(2px);
           backdrop-filter: blur(2px);
@@ -1033,6 +1050,44 @@ input[type=file] {
   cursor: pointer;
 }
 
+.click-option {
+  background: var(--option-color);
+  padding: 20px;
+  border-radius: 10px;
+  position: absolute;
+  bottom: 40px;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  font-size: 0.7rem;
+  z-index: 99;
+}
+
+.click-option ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  list-style-type: none;
+  gap: 20px;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+}
+
+.click-option ul li:hover {
+  cursor: pointer;
+}
+
 .about {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1054,7 +1109,7 @@ input[type=file] {
   width: -webkit-max-content;
   width: -moz-max-content;
   width: max-content;
-  background: #1d2f42;
+  background: var(--option-color);
   top: 50%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
