--- a/public/login.ejs
+++ b/public/login.ejs
@@ -80,7 +80,7 @@
             <div class="form-2" style="display: none;">
                 <div class="form-field">
                     <label for="name"  id="name-label">Your name</label>
-                    <input type="text" name="name" id="name">
+                    <input type="text" name="name" id="name" maxlength="20">
                 </div>
                 <div class="form-field">
                     <div class="avatars">
