--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -7,7 +7,7 @@
   --primary-dark: #111d2a;
   --foreground-dark: #ffffff;
   --secondary-dark: #6aa4db;
-  --focus--dark: #192838;
+  --focus--dark: #192838bd;
   --secondary: var(--secondary-dark);
   --primary: var(--primary-dark);
   --foreground: var(--foreground-dark);
@@ -15,6 +15,7 @@
   --option-color: var(--focus--dark);
   --topbarsize: 50px;
   --app-height: 100vh;
+  --pattern: url('/images/a.png');
 }
 
 html {
@@ -29,8 +30,8 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  background: var(--primary);
-  background-size: contain;
+  background: var(--primary) var(--pattern);
+  background-blend-mode: multiply;
   color: var(--foreground);
   height: var(--app-height);
   -webkit-user-select: none;
@@ -275,7 +276,7 @@ input[type=file] {
   left: 0;
   width: 100%;
   height: 40%;
-  background: var(--option-color);
+  background: #192838;
   z-index: 100;
 }
 
