--- a/public/chat.ejs
+++ b/public/chat.ejs
@@ -43,6 +43,7 @@
   <link rel="apple-touch-startup-image" href="icons/apple-splash-640-1136.jpg" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)">
   <link rel="apple-touch-startup-image" href="icons/apple-splash-1136-640.jpg" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)">
   <link rel="preload" as="image" type="image/png" href="/images/icons8-place-marker.gif">
+  <link rel="preload" as="image" type="image/png" href="/images/a.png">
   <link rel="preload" as="font" type="font/ttf" href="/fonts/comic.ttf">
   <meta charset="utf-8">
   <title>Inbox | PokeTab Messanger</title>
