accept image type

--- a/public/chat.ejs
+++ b/public/chat.ejs
@@ -103,7 +103,7 @@
             <div class="location" id="send-location"><i class="fa-solid fa-location-crosshairs"></i></div>
             <div class="upload_image">
               <label for="photo"><i class="fa-solid fa-image"></i></label>
-              <input type="file" name="photo" id="photo" accept="image/*">
+              <input type="file" name="photo" id="photo" accept="image/png, image/jpg, image/jpeg, image/gif">
             </div>
             <textarea name="message" id="textbox" placeholder="Type message..."></textarea>
             <button class="send"><i class="fa-solid fa-paper-plane"></i></button>
