--- a/public/login.ejs
+++ b/public/login.ejs
@@ -56,6 +56,7 @@
     <title>Join | PokeTab Messanger</title>
 </head>
 <body>
+    <div class="offline" style="display: none; background: orange;padding: 9px;width: 100%;text-align: center;position: fixed;top: 0;">You are offline!</div>
     <div class="container">
         <form action="/chat" method="post" autocomplete="off" id="form" onsubmit="return check();">
             <div class="form-1" style="display: block;">
