--- a/public/chat.ejs
+++ b/public/chat.ejs
@@ -65,6 +65,7 @@
     <h3 style="margin: 0; font-size: 1.3rem;">Creating Pokemon World</h3>
   </div>
   <div id="main-screen" style="visibility: hidden;">
+  <div class="offline" style="display: none; background: orange;padding: 9px;width: 100%;text-align: center;position: fixed;top: 0;"></div>
     <div class="topbar">
       <div class="topbar-wrapper">
         <div class="menu"></div>
@@ -220,6 +221,6 @@
   <script defer src="/js/libs/moment.min.js"></script>
   <script defer src="/js/libs/mustache.min.js"></script>
   <script defer src="/js/libs/deparam.min.js"></script>
-  <script defer src="/js/chat.min.js"></script>
+  <script defer src="/js/chat.js"></script>
 </body>
 </html>
