--- a/public/create.ejs
+++ b/public/create.ejs
@@ -56,7 +56,7 @@
     <title>Create | PokeTab Messanger</title>
 </head>
 <body>
-    <div class="offline" style="display: none; background: orange;padding: 9px;width: 100%;text-align: center;position: fixed;top: 0;"></div>
+    <div class="offline" style="display: none; background: orange;padding: 9px;width: 100%;text-align: center;position: fixed;top: 0; z-index:1000;"></div>
     <div class="container">
         <form action="/chat" method="post" autocomplete="off" id="form" onsubmit="return check();">
             <div class="form-1" style="display: block;">
