--- a/public/chat.ejs
+++ b/public/chat.ejs
@@ -65,11 +65,10 @@
     <h3 style="margin: 0; font-size: 1.3rem;">Creating Pokemon World</h3>
   </div>
   <div id="main-screen" style="visibility: hidden;">
-  <div class="offline" style="display: none; background: orange;padding: 9px;width: 100%;text-align: center;position: relative;top: 0;"></div>
+    <div class="offline" style="display: none; background: orange;padding: 2px;width: 100%;text-align: center;position: relative;top: 0; font-size: 0.7rem"></div>
     <div class="topbar">
       <div class="topbar-wrapper">
         <div class="menu"></div>
-        <!--div class="mode"><i class="fa-solid fa-sun"></i></div-->
       </div>
     </div>
     <div class="menuwrapper">
