--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -477,7 +477,7 @@ scrollbar-width: none;  /* Firefox */
   display: flex;
   align-items: center;
   position: absolute;
-  height: var(--topbarsize);
+  padding-top: 20px;
   width: 100%;
   background: transparent;
   //backdrop-filter: blur(2px);
