--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -673,7 +673,7 @@ input[type=file] {
   list-style-type: none;
   color: grey;
   font-size: 0.7rem;
-  padding: 0 0 5px 10px;
+  padding: 0 0 0 10px;
 }
 
 #typingindicator li {
@@ -1028,6 +1028,7 @@ input[type=file] {
           justify-content: center;
   width: 100%;
   padding: 0 10px;
+  margin-bottom: 10px;
   background: transparent;
 }
 
@@ -1040,7 +1041,6 @@ input[type=file] {
   resize: none;
   background: var(--focus);
   border: none;
-  margin: 10px;
   -webkit-transition: 200ms;
   transition: 200ms;
   color: var(--foreground);
