--- a/public/create.ejs
+++ b/public/create.ejs
@@ -152,7 +152,7 @@
                     <input type="number" name="maxuser" max="15" min="2" value="2">
                 </div>
                 <div class="form-field">
-                    <input type="submit" value="Join" id="join">
+                    <input type="submit" value="Create" id="join">
                 </div>
             </div>
         </form>
