--- a/public/chat.ejs
+++ b/public/chat.ejs
@@ -129,11 +129,12 @@
 
       <div class="click-option" style="display: none;">
         <ul>
-          <li class="reply-action">Reply <i class="fa-solid fa-reply"></i></li>
-          <li class="view-action" style="display: none;">View <i class="fa-regular fa-eye"></i></li>
-          <li class="store-action" style="display: none;">Save <i class="fa-solid fa-download"></i></li>
-          <li class="copy-action" style="display: none;">Copy <i class="fa-regular fa-clone"></i></li>
-          <li class="close-action"> Close <i class="fa-solid fa-xmark"></i></li>
+          <li class="reply-action"><i class="fa-solid fa-reply"></i></li>
+          <li class="view-action" style="display: none;"><i class="fa-regular fa-eye"></i></li>
+          <li class="store-action" style="display: none;"><i class="fa-solid fa-download"></i></li>
+          <li class="copy-action" style="display: none;"><i class="fa-regular fa-clone"></i></li>
+          <li class="delete-action"><i class="fa-solid fa-trash"></i></li>
+          <li class="close-action"><i class="fa-solid fa-xmark"></i></li>
         </ul>
       </div>
     
