--- a/public/create.ejs
+++ b/public/create.ejs
@@ -66,7 +66,7 @@
                 </div>
                 <div class="form-field">
                     <label for="key" id="key-label">Tap to Copy</label>
-                    <input type="text" name="key" class="copy-key" id="key" minlength="10" maxlength="10" readonly>
+                    <input type="text" name="key" value="Generating Key" class="copy-key" id="key" minlength="10" maxlength="10" readonly>
                 </div>
                 <div class="form-field">
                     <input type="button" value="Next" id="next">
