--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -8,6 +8,7 @@
   --foreground-dark: #ffffff;
   --secondary-dark: #6aa4db;
   --focus--dark: #192838bd;
+  --red: #cd4040;
   --secondary: var(--secondary-dark);
   --primary: var(--primary-dark);
   --foreground: var(--foreground-dark);
@@ -42,7 +43,7 @@ body {
 }
 
 .close-action, .delete-action {
-  color: #fc6262;
+  color: var(--red);
 }
 
 .reply-action, .store-action, .view-action, .copy-action {
@@ -308,7 +309,7 @@ input[type=file] {
   right: 0;
   padding: 10px;
   cursor: pointer;
-  color: orangered;
+  color: var(--red);
 }
 
 .previewimage .sendimage {
@@ -571,7 +572,6 @@ input[type=file] {
 }
 
 .server__message__body {
-  padding-bottom: 10px;
   font-size: 0.7rem;
 }
 
@@ -949,7 +949,7 @@ input[type=file] {
   bottom: 80px;
   left: 50%;
   background: var(--option-color);
-  padding: 10px;
+  padding: 5px 10px;
   border-radius: 25px;
   -webkit-backdrop-filter: blur(2px);
           backdrop-filter: blur(2px);
@@ -961,11 +961,13 @@ input[type=file] {
   width: -webkit-max-content;
   width: -moz-max-content;
   width: max-content;
+  -webkit-filter: drop-shadow(2px 4px 6px black);
+          filter: drop-shadow(2px 4px 6px black);
 }
 
 .newmessagepopup img {
-  height: 15px;
-  width: 15px;
+  height: 20px;
+  width: 20px;
 }
 
 .newmessagepopup .msg {
@@ -1064,6 +1066,8 @@ input[type=file] {
   font-size: 0.9rem;
   -webkit-backdrop-filter: blur(2px);
           backdrop-filter: blur(2px);
+  -webkit-filter: drop-shadow(2px 4px 6px black);
+          filter: drop-shadow(2px 4px 6px black);
   z-index: 99;
 }
 
@@ -1154,7 +1158,7 @@ img {
 }
 
 .toast-popup .toast-popup-close {
-  color: orangered;
+  color: var(--red);
   font-weight: 100;
   position: absolute;
   right: 10px;
