session end timeout

--- a/public/create.ejs
+++ b/public/create.ejs
@@ -165,6 +165,9 @@
             <li>You cannot see previous messages after re joining.</li>
             <li>You can vibrate other users phone by tapping ther name from the active online users list.</li>
             <li>On Pc, use can use Ctrl+Enter to send message.</li>
+            <li>Deleting messages will be deleted for everyone on the current chat.</li>
+            <li>From 2 to 15 people can join on the same chat. You can limit the maximum peoples who can join.</li>
+            <li>Session key will expire after 10 seconds if there's no one on the chat.</li>
         </ul>
     </fieldset>
     <div class="popup-message" style="display: none;"></div>
