--- a/public/create.ejs
+++ b/public/create.ejs
@@ -148,8 +148,8 @@
                 </div>
                 </div>
                 <div class="form-field">
-                    <label for="max-user">Select max user</label>
-                    <input type="number" name="maxuser" max="15" min="2" value="2">
+                    <label for="max-user">Select max user (<span id="rangeValue">2</span>)</label>
+                    <input type="range" id="maxuser" name="maxuser" max="15" min="2" value="2">
                 </div>
                 <div class="form-field">
                     <input type="submit" value="Create" id="join">
