--- a/public/css/index.css
+++ b/public/css/index.css
@@ -147,10 +147,21 @@ body {
   background: var(--background-light);
   padding: 10px;
   border-radius: 10px;
+  min-width: 280px;
 }
 
 .form-field {
   margin: 20px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .form-field > * {
