--- a/public/css/index.scss
+++ b/public/css/index.scss
@@ -110,10 +110,14 @@ body {
   background: var(--background-light);
   padding: 10px;
   border-radius: 10px;
+  min-width: 280px;
 }
 
 .form-field {
   margin: 20px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .form-field>* {
