click and hold event

--- a/public/chat.ejs
+++ b/public/chat.ejs
@@ -130,7 +130,6 @@
       <div class="click-option" style="display: none;">
         <ul>
           <li class="reply-action"><i class="fa-solid fa-reply"></i></li>
-          <li class="view-action" style="display: none;"><i class="fa-regular fa-eye"></i></li>
           <li class="store-action" style="display: none;"><i class="fa-solid fa-download"></i></li>
           <li class="copy-action" style="display: none;"><i class="fa-regular fa-clone"></i></li>
           <li class="delete-action"><i class="fa-solid fa-trash"></i></li>
@@ -221,6 +220,6 @@
   <script defer src="/js/libs/moment.min.js"></script>
   <script defer src="/js/libs/mustache.min.js"></script>
   <script defer src="/js/libs/deparam.min.js"></script>
-  <script defer src="/js/chat.min.js"></script>
+  <script defer src="/js/chat.js"></script>
 </body>
 </html>
